--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,7 +7,8 @@
   "scripts": {
    "dev":"nodemon index.js",
     "start": "node index.js",
-    "build":"npm install && npm install --prefix Frontend && npm run build --prefix Frontend"
+    "build": "npm run build --prefix Frontend"
+
   },
   "keywords": [
     "MERN"
