fix production problem

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,12 +4,12 @@
   "description": "ChatApp ",
   "main": "index.js",
   "type": "module",
+ 
   "scripts": {
-   "dev":"nodemon index.js",
-    "start": "node index.js",
-    "build": "npm run build --prefix Frontend"
-
-  },
+  "dev": "nodemon index.js",
+  "start": "node index.js",
+  "build": "npm install --prefix Frontend && npm run build --prefix Frontend"
+},
   "keywords": [
     "MERN"
   ],
