production install express

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -8,8 +8,9 @@
   "scripts": {
   "dev": "nodemon index.js",
   "start": "node index.js",
-  "build": "npm install --prefix Frontend && npm run build --prefix Frontend"
-},
+  "build": "npm install && npm install --prefix Frontend && npm run build --prefix Frontend"
+}
+,
   "keywords": [
     "MERN"
   ],
